[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Propose_teams.gd" type="Script" id=1]
[ext_resource path="res://asset/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://asset/generate_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="ButtonGroup" id=5]

[node name="Compute" type="Control"]
modulate = Color( 0.992157, 0.972549, 0.972549, 1 )
margin_right = 565.0
margin_bottom = 299.0
rect_scale = Vector2( 1.44092, 1.19521 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1418.0
margin_bottom = 1006.0
color = Color( 0.156863, 0.196078, 0.392157, 1 )

[node name="Sfondo" type="Control" parent="."]
self_modulate = Color( 0.0313726, 0.192157, 0.207843, 1 )
light_mask = 3
margin_right = 1180.0
margin_bottom = 648.0
rect_scale = Vector2( 1.20209, 1.56315 )
theme = SubResource( 2 )

[node name="Presenti" type="RichTextLabel" parent="Sfondo"]
light_mask = 3
margin_left = 65.0
margin_top = 85.0
margin_right = 265.0
margin_bottom = 576.0
bbcode_enabled = true
tab_size = 6
fit_content_height = true
custom_effects = [ null ]

[node name="Genera" type="Button" parent="Sfondo"]
light_mask = 3
margin_left = 870.0
margin_top = 221.841
margin_right = 1080.0
margin_bottom = 262.841
theme = ExtResource( 3 )
group = SubResource( 3 )
text = "Genera squadre"

[node name="Next" type="Button" parent="Sfondo"]
light_mask = 3
margin_left = 870.0
margin_top = 281.841
margin_right = 1080.0
margin_bottom = 322.841
theme = ExtResource( 3 )
disabled = true
text = "Prossima"

[node name="Previous" type="Button" parent="Sfondo"]
light_mask = 3
margin_left = 870.0
margin_top = 341.841
margin_right = 1080.0
margin_bottom = 382.841
theme = ExtResource( 3 )
disabled = true
text = "Precedente"

[node name="Scelta" type="Button" parent="Sfondo"]
light_mask = 3
margin_left = 870.0
margin_top = 401.841
margin_right = 1080.0
margin_bottom = 442.841
theme = ExtResource( 3 )
disabled = true
text = "Scegli questa"

[node name="Scelta_random" type="Button" parent="Sfondo"]
light_mask = 3
margin_left = 870.0
margin_top = 461.841
margin_right = 1080.0
margin_bottom = 502.841
theme = ExtResource( 3 )
disabled = true
text = "Scegli a caso"

[node name="Stampa Presenti" type="Button" parent="Sfondo"]
visible = false
light_mask = 3
margin_left = 870.612
margin_top = 306.161
margin_right = 1026.61
margin_bottom = 336.161
rect_scale = Vector2( 1.34764, 1.35091 )
group = SubResource( 4 )
text = "Stampa Presenti"

[node name="Cambia Presenti" type="Button" parent="Sfondo"]
light_mask = 3
margin_left = 870.612
margin_top = 161.841
margin_right = 1080.61
margin_bottom = 202.841
theme = ExtResource( 3 )
group = SubResource( 5 )
text = "Cambia Presenti"

[node name="Avvisi" type="Label" parent="Sfondo"]
margin_left = 564.0
margin_top = 40.0
margin_right = 1125.0
margin_bottom = 100.0

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 589.789
margin_right = 1041.79
margin_bottom = 1003.0
size_flags_horizontal = 7
size_flags_vertical = 7
alignment = 1

[node name="Label" type="Label" parent="VBox"]
visible = false
margin_right = 523.0
margin_bottom = 14.0
size_flags_vertical = 2

[node name="Squadre" type="RichTextLabel" parent="VBox"]
light_mask = 3
margin_top = 486.0
margin_right = 452.0
margin_bottom = 516.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource( 3 )
tab_size = 6
fit_content_height = true
scroll_following = true
custom_effects = [ null ]

[node name="Label2" type="Label" parent="VBox"]
visible = false
margin_top = 511.0
margin_right = 523.0
margin_bottom = 525.0
size_flags_vertical = 5

[connection signal="pressed" from="Sfondo/Genera" to="." method="_on_Genera_pressed"]
[connection signal="pressed" from="Sfondo/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Sfondo/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Sfondo/Scelta" to="." method="_on_Scelta_pressed"]
[connection signal="button_up" from="Sfondo/Scelta_random" to="." method="_on_Scelta_random_button_up"]
[connection signal="pressed" from="Sfondo/Stampa Presenti" to="." method="_on_Stampa_Presenti_pressed"]
[connection signal="pressed" from="Sfondo/Cambia Presenti" to="." method="_on_Cambia_Presenti_pressed"]
